OpenJMLTest/test/gitbug638/expected
test/gitbug638/CONS.java:12: error: Implicit references to 'this' are not permitted in constructor preconditions: x
//@   requires x == 10;
               ^
test/gitbug638/CONS.java:15: error: Implicit references to 'this' are not permitted in constructor preconditions: size
//@ requires size() != 10;
             ^
test/gitbug638/Test.java:9: error: Implicit references to 'this' are not permitted in constructor preconditions: x
    //@ requires x >= 0;
                 ^
test/gitbug638/Test.java:12: error: References to 'this' are not permitted in constructor preconditions: this
    //@ requires this.x >= 0;
                 ^
test/gitbug638/Test.java:24: error: References to 'this' are not permitted in constructor preconditions: this
    //@ requires t != this;
                      ^
test/gitbug638/Test.java:28: error: cannot reference this before supertype constructor has been called
        this(this);
             ^
Operation not performed because of parse or type errors
6 errors
